added test to build.gtadle